ACLOCAL_AMFLAGS = -I m4

SUBDIRS = src include

EXTRA_DIST = autogen.sh \
	     src/tests/gen_type1_test1.c \
	     src/tests/gen_type1_test2.c \
	     src/tests/gen_type2_test1.c \
	     src/tests/gen_type2_test2.c \
	     src/tests/seedcalc_type1_test1.c \
	     src/tests/seedcalc_type1_test2.c \
	     src/tests/seedcalc_type1_test3.c \
	     src/tests/seedcalc_type2_test1.c \
	     src/tests/seedcalc_type2_test2.c \
	     src/tests/seedcalc_type2_test3.c
