[metadata]
name = libcx
description = CX contact tracing
author = Michael Brown
author_email = mcb30@ipxe.org
url = https://cx.ipxe.org
license = GPLv2+
copyright = Copyright 2020 Michael Brown
classifiers = Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Environment :: No Input/Output (Daemon)
    Intended Audience :: Developers
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Programming Language :: Python :: 3
    Topic :: Communications
    Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Security
    Topic :: Software Development :: Libraries
